Source/WebCore/platform/graphics/avfoundation/MediaTimeAVFoundation.cpp
@@ -28,13 +28,14 @@
 
 #if USE(AVFOUNDATION)
 
+#include "CoreMediaSoftLink.h"
+
 #if PLATFORM(WIN)
 #include <CoreMedia/CoreMedia.h>
 #include "CoreMediaSoftLinking.h"
 #else
 #include "SoftLinking.h"
 SOFT_LINK_FRAMEWORK(CoreMedia)
-SOFT_LINK(CoreMedia, CMTimeMakeWithSeconds, CMTime, (Float64 seconds, int32_t preferredTimeScale), (seconds, preferredTimeScale))
 SOFT_LINK(CoreMedia, CMTimeMake, CMTime, (int64_t value, int32_t timescale), (value, timescale))
 #endif
 
