Source/WebCore/platform/mac/PlatformClockCM.mm
@@ -29,6 +29,7 @@
 
 #import "PlatformClockCM.h"
 
+#import "CoreMediaSoftLink.h"
 #import "MediaTimeAVFoundation.h"
 #import "SoftLinking.h"
 #if PLATFORM(IOS)
@@ -48,7 +49,6 @@ SOFT_LINK(CoreMedia, CMTimebaseCreateWithMasterClock, OSStatus, (CFAllocatorRef 
 SOFT_LINK(CoreMedia, CMTimebaseSetTime, OSStatus, (CMTimebaseRef timebase, CMTime time), (timebase, time))
 SOFT_LINK(CoreMedia, CMTimebaseGetTime, CMTime, (CMTimebaseRef timebase), (timebase))
 SOFT_LINK(CoreMedia, CMTimebaseSetRate, OSStatus, (CMTimebaseRef timebase, Float64 rate), (timebase, rate))
-SOFT_LINK(CoreMedia, CMTimeMakeWithSeconds, CMTime, (Float64 seconds, int32_t preferredTimeScale), (seconds, preferredTimeScale))
 SOFT_LINK(CoreMedia, CMTimeGetSeconds, Float64, (CMTime time), (time))
 
 using namespace WebCore;
